k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: prod
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
